--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
         "php": ">=5.3.0",
         "danielspk/tornado": "dev-master",
 		"danielspk/phplibs": "dev-master",
-		"swiftmailer/swiftmailer": "5.4.*"
+		"swiftmailer/swiftmailer": "~5.4"
     },
     "config": {
         "vendor-dir": "app/vendor"
