--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
     "require": {
-        "php": ">=5.3.0",
-        "danielspk/tornado": "dev-master",
-		"danielspk/phplibs": "dev-master",
+        "php": ">=5.4.0",
+        "danielspk/tornado": "2.0.*",
+		"danielspk/phplibs": "0.8.*",
 		"swiftmailer/swiftmailer": "~5.4"
+    },
+    "autoload": {
+      "psr-4": {
+        "App\\Modules\\": "app/modules/"
+      }
     },
     "config": {
         "vendor-dir": "app/vendor"
